--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shepherd InfoSec</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="refresh" content="2; url='https://sawyershepherd.org'" />
   </head>
   <body>
-      <h1>Shepherd InfoSec</h1>
-      <ul>
-          <li>
-            <a href="javascript:location='mailto:\u0073\u0061\u0077\u0079\u0065\u0072\u0040\u0073\u0068\u0065\u0070\u0068\u0065\u0072\u0064\u0069\u006e\u0066\u006f\u0073\u0065\u0063\u002e\u0063\u006f\u006d';void 0"><script type="text/javascript">document.write('\u0073\u0061\u0077\u0079\u0065\u0072\u0040\u0073\u0068\u0065\u0070\u0068\u0065\u0072\u0064\u0069\u006e\u0066\u006f\u0073\u0065\u0063\u002e\u0063\u006f\u006d')</script></a>
-          </li>
-          <li><a
-                  href="https://github.com/sawshep">github.com/sawshep</a></li>
-      </ul>
-      <h2>Education</h2>
-      <h3>University of North Georgia</h3>
-      <p>Pursuing bachelor's degree in cybersecurity</p>
-
-      <h2>Competition Experience</h2>
-      <h3>HSCTF 8</h3>
-      <p>Team placed 26th nationally in high school division</p>
-      <h3>HSCTF 9</h3>
-      <p>Team placed 10th nationally in high school division</p>
-      
+      <p>Redirecting to <a
+          href="https://sawyershepherd.org">sawyershepherd.org</a> soon...</p>
   </body>
 </html>
